--- a/static/iframe.html
+++ b/static/iframe.html
@@ -10,9 +10,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <link rel="stylesheet" href="http://localhost:4242/challenge_form.css">
+    <link rel="stylesheet/less" href="http://localhost:4242/animated_success.less">
 </head>
 
 <script>
+
+    let isEmail = (email) => {
+        let regex = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+        return regex.test(email);
+    }
 
     let sendChallInputToACS = (form_data) => {
         return fetch('http://localhost:4242/acs/challengeresult', {
@@ -37,14 +43,26 @@
             form_data.email = $('#inputEmail').val()
             form_data.password = $('#inputPassword').val()
             form_data.sms = $('#inputSMS').val()
+            form_data.acsTransID = "#!ACS_TRANS_ID!#"
+
+            if (!isEmail(form_data.email)) {
+                console.log('email not valid');
+                return
+            }
 
             console.log(form_data);
-            
 
             sendChallInputToACS(form_data)
                 .then((response) => {
                     console.log(response);
-                    
+                    if (response.messageType === 'CRes') {
+                        $('#info-form').hide();
+                        $('#success_pay').show();
+
+                        window.parent.postMessage(response, 'http://localhost:9094');
+
+                    }
+
                 })
         })
 
@@ -56,7 +74,7 @@
 
     <div class="container">
 
-        <form class="form-signin">
+        <form class="form-signin" id="info-form">
             <h2 class="form-signin-heading">Please sign in</h2>
             <label for="inputEmail" class="sr-only">Email address</label>
             <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
@@ -69,8 +87,18 @@
                     <input type="checkbox" value="remember-me"> Remember me
                 </label> -->
             </div>
-            <button id='button-submit' class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            <button id='button-submit' class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
         </form>
+        <!-- style="display:none" -->
+        <div id="success_pay" style="display:none">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 130.2 130.2">
+                <circle class="path circle" fill="none" stroke="#73AF55" stroke-width="6" stroke-miterlimit="10" cx="65.1" cy="65.1" r="62.1"
+                />
+                <polyline class="path check" fill="none" stroke="#73AF55" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10"
+                    points="100.2,40.2 51.5,88.8 29.8,67.5 " />
+            </svg>
+            <p class="success">Authentication Successful !</p>
+        </div>
 
     </div>
     <!-- /container -->
@@ -78,6 +106,8 @@
     <!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSWhsKPYGAMf9cNODX0JnML_b_44H2TCiKtfBA89KqvfPIBriG" alt=""> -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
         crossorigin="anonymous"></script>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.0.2/less.min.js"></script>
 
 </body>
 
