--- a/static/iframe.html
+++ b/static/iframe.html
@@ -9,8 +9,8 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="http://localhost:4242/challenge_form.css">
-    <link rel="stylesheet/less" href="http://localhost:4242/animated_success.less">
+    <link rel="stylesheet" href="https://threedsserver-demo.lyra-labs.fr/challenge_form.css">
+    <link rel="stylesheet/less" href="https://threedsserver-demo.lyra-labs.fr/animated_success.less">
 </head>
 
 <script>
@@ -32,7 +32,7 @@
     }
 
     let sendChallInputToACS = (form_data) => {
-        return fetch('http://localhost:4242/acs/challengeresult', {
+        return fetch('https://threedsserver-demo.lyra-labs.fr/acs/challengeresult', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
@@ -73,7 +73,6 @@
 
                         // will send CRes
                         sendCresToNotificationURL(response)
-
                     }
                 })
         })
